--- a/gopages/src/github.com/johnstarich/go/gopages/internal/generate/template.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/generate/template.go.html
@@ -64,106 +64,124 @@
 <span id="L8" class="ln">     8  </span>	&#34;time&#34;
 <span id="L9" class="ln">     9  </span>
 <span id="L10" class="ln">    10  </span>	&#34;github.com/johnstarich/go/gopages/internal/flags&#34;
-<span id="L11" class="ln">    11  </span>	&#34;github.com/johnstarich/go/gopages/internal/pipe&#34;
+<span id="L11" class="ln">    11  </span>	&#34;github.com/johnstarich/go/pipe&#34;
 <span id="L12" class="ln">    12  </span>	&#34;github.com/pkg/errors&#34;
 <span id="L13" class="ln">    13  </span>	&#34;golang.org/x/tools/godoc&#34;
 <span id="L14" class="ln">    14  </span>	&#34;golang.org/x/tools/godoc/vfs&#34;
 <span id="L15" class="ln">    15  </span>)
 <span id="L16" class="ln">    16  </span>
-<span id="L17" class="ln">    17  </span>func addGoPagesFuncs(funcs template.FuncMap, modulePackage string, args flags.Args) {
-<span id="L18" class="ln">    18  </span>	funcs[&#34;node_html&#34;] = nodeHTML(funcs[&#34;node_html&#34;].(node_htmlFunc), args.BaseURL)
-<span id="L19" class="ln">    19  </span>
-<span id="L20" class="ln">    20  </span>	longTitle := fmt.Sprintf(&#34;%s | %s&#34;, args.SiteTitle, args.SiteDescription)
-<span id="L21" class="ln">    21  </span>	if args.SiteTitle == &#34;&#34; || args.SiteDescription == &#34;&#34; {
-<span id="L22" class="ln">    22  </span>		longTitle = &#34;&#34;
-<span id="L23" class="ln">    23  </span>	}
-<span id="L24" class="ln">    24  </span>	values := map[string]interface{}{
-<span id="L25" class="ln">    25  </span>		&#34;BaseURL&#34;:       args.BaseURL,
-<span id="L26" class="ln">    26  </span>		&#34;ModuleURL&#34;:     path.Join(args.BaseURL, &#34;/pkg&#34;, modulePackage) + &#34;/&#34;,
-<span id="L27" class="ln">    27  </span>		&#34;SiteTitle&#34;:     args.SiteTitle,
-<span id="L28" class="ln">    28  </span>		&#34;SiteTitleLong&#34;: longTitle,
-<span id="L29" class="ln">    29  </span>	}
-<span id="L30" class="ln">    30  </span>	funcs[&#34;gopages&#34;] = func(defaultValue, firstKey string, keys ...string) (string, error) {
-<span id="L31" class="ln">    31  </span>		keys = append([]string{firstKey}, keys...) <span class="comment">// require at least one key</span>
-<span id="L32" class="ln">    32  </span>		for _, key := range keys {
-<span id="L33" class="ln">    33  </span>			value, ok := values[key]
-<span id="L34" class="ln">    34  </span>			var valueStr string
-<span id="L35" class="ln">    35  </span>			err := pipe.ChainFuncs(
-<span id="L36" class="ln">    36  </span>				func() error {
-<span id="L37" class="ln">    37  </span>					return pipe.ErrIf(!ok, errors.Errorf(&#34;Unknown gopages key: %q&#34;, key))
-<span id="L38" class="ln">    38  </span>				},
-<span id="L39" class="ln">    39  </span>				func() error {
-<span id="L40" class="ln">    40  </span>					var isString bool
-<span id="L41" class="ln">    41  </span>					valueStr, isString = value.(string)
-<span id="L42" class="ln">    42  </span>					return pipe.ErrIf(!isString, errors.Errorf(&#34;gopages key %q is not a string&#34;, key))
-<span id="L43" class="ln">    43  </span>				},
-<span id="L44" class="ln">    44  </span>			).Do()
-<span id="L45" class="ln">    45  </span>			if err != nil || valueStr != &#34;&#34; {
-<span id="L46" class="ln">    46  </span>				return template.HTMLEscapeString(valueStr), err
-<span id="L47" class="ln">    47  </span>			}
-<span id="L48" class="ln">    48  </span>		}
-<span id="L49" class="ln">    49  </span>		return defaultValue, nil
-<span id="L50" class="ln">    50  </span>	}
-<span id="L51" class="ln">    51  </span>	funcs[&#34;gopagesWatchScript&#34;] = func() string {
-<span id="L52" class="ln">    52  </span>		script := fmt.Sprintf(`
-<span id="L53" class="ln">    53  </span>&lt;script&gt;
-<span id="L54" class="ln">    54  </span>const startDate = %q
-<span id="L55" class="ln">    55  </span>const timeoutMillis = 2000
-<span id="L56" class="ln">    56  </span>const poll = () =&gt; {
-<span id="L57" class="ln">    57  </span>	fetch(window.location).then(resp =&gt; {
-<span id="L58" class="ln">    58  </span>		const newDate = resp.headers.get(&#34;GoPages-Last-Updated&#34;)
-<span id="L59" class="ln">    59  </span>		if (newDate != startDate) {
-<span id="L60" class="ln">    60  </span>			window.location.reload()
-<span id="L61" class="ln">    61  </span>		}
-<span id="L62" class="ln">    62  </span>	})
-<span id="L63" class="ln">    63  </span>}
-<span id="L64" class="ln">    64  </span>window.setInterval(poll, timeoutMillis)
-<span id="L65" class="ln">    65  </span>&lt;/script&gt;
-<span id="L66" class="ln">    66  </span>`, time.Now().Format(time.RFC3339))
-<span id="L67" class="ln">    67  </span>		if !args.Watch {
-<span id="L68" class="ln">    68  </span>			script = &#34;&#34;
-<span id="L69" class="ln">    69  </span>		}
-<span id="L70" class="ln">    70  </span>		return script
-<span id="L71" class="ln">    71  </span>	}
-<span id="L72" class="ln">    72  </span>}
-<span id="L73" class="ln">    73  </span>
-<span id="L74" class="ln">    74  </span>func readTemplates(pres *godoc.Presentation, funcs template.FuncMap, fs vfs.FileSystem) {
-<span id="L75" class="ln">    75  </span>	pres.CallGraphHTML = readTemplate(funcs, fs, &#34;callgraph.html&#34;)
-<span id="L76" class="ln">    76  </span>	pres.DirlistHTML = readTemplate(funcs, fs, &#34;dirlist.html&#34;)
-<span id="L77" class="ln">    77  </span>	pres.ErrorHTML = readTemplate(funcs, fs, &#34;error.html&#34;)
-<span id="L78" class="ln">    78  </span>	pres.ExampleHTML = readTemplate(funcs, fs, &#34;example.html&#34;)
-<span id="L79" class="ln">    79  </span>	pres.GodocHTML = parseTemplate(funcs, &#34;godoc.html&#34;, godocHTML)
-<span id="L80" class="ln">    80  </span>	pres.ImplementsHTML = readTemplate(funcs, fs, &#34;implements.html&#34;)
-<span id="L81" class="ln">    81  </span>	pres.MethodSetHTML = readTemplate(funcs, fs, &#34;methodset.html&#34;)
-<span id="L82" class="ln">    82  </span>	pres.PackageHTML = readTemplate(funcs, fs, &#34;package.html&#34;)
-<span id="L83" class="ln">    83  </span>	pres.PackageRootHTML = readTemplate(funcs, fs, &#34;packageroot.html&#34;)
-<span id="L84" class="ln">    84  </span>}
-<span id="L85" class="ln">    85  </span>
-<span id="L86" class="ln">    86  </span>func readTemplate(funcs template.FuncMap, fs vfs.FileSystem, name string) *template.Template {
-<span id="L87" class="ln">    87  </span>	<span class="comment">// use underlying file system fs to read the template file</span>
-<span id="L88" class="ln">    88  </span>	<span class="comment">// (cannot use template ParseFile functions directly)</span>
-<span id="L89" class="ln">    89  </span>	data, err := vfs.ReadFile(fs, path.Join(&#34;lib/godoc&#34;, name))
-<span id="L90" class="ln">    90  </span>	if err != nil {
-<span id="L91" class="ln">    91  </span>		panic(err)
-<span id="L92" class="ln">    92  </span>	}
-<span id="L93" class="ln">    93  </span>	return parseTemplate(funcs, name, string(data))
-<span id="L94" class="ln">    94  </span>}
-<span id="L95" class="ln">    95  </span>
-<span id="L96" class="ln">    96  </span>func parseTemplate(funcs template.FuncMap, name, data string) *template.Template {
-<span id="L97" class="ln">    97  </span>	return template.Must(template.New(name).Funcs(funcs).Parse(data))
-<span id="L98" class="ln">    98  </span>}
-<span id="L99" class="ln">    99  </span>
-<span id="L100" class="ln">   100  </span>type node_htmlFunc = func(info *godoc.PageInfo, node interface{}, linkify bool) string
-<span id="L101" class="ln">   101  </span>
-<span id="L102" class="ln">   102  </span><span class="comment">// nodeHTML runs the original &#39;node_html&#39; template func, then rewrites any links inside it</span>
-<span id="L103" class="ln">   103  </span>func nodeHTML(original node_htmlFunc, baseURL string) node_htmlFunc {
-<span id="L104" class="ln">   104  </span>	pkgURL := path.Join(baseURL, &#34;/pkg&#34;)
-<span id="L105" class="ln">   105  </span>	return func(info *godoc.PageInfo, node interface{}, linkify bool) string {
-<span id="L106" class="ln">   106  </span>		s := original(info, node, linkify)
-<span id="L107" class="ln">   107  </span>		return strings.ReplaceAll(s, `&lt;a href=&#34;/pkg/`, fmt.Sprintf(`&lt;a href=&#34;%s/`, pkgURL))
-<span id="L108" class="ln">   108  </span>	}
-<span id="L109" class="ln">   109  </span>}
-<span id="L110" class="ln">   110  </span>
+<span id="L17" class="ln">    17  </span>var (
+<span id="L18" class="ln">    18  </span>	errTemplateValueEmpty  = fmt.Errorf(&#34;empty template value&#34;)
+<span id="L19" class="ln">    19  </span>	goPagesTemplateVarPipe = pipe.New(pipe.Options{}).
+<span id="L20" class="ln">    20  </span>				Append(func(args []interface{}) (string, interface{}, bool) {
+<span id="L21" class="ln">    21  </span>			templateKey := args[0].(string)
+<span id="L22" class="ln">    22  </span>			templateValue := args[1]
+<span id="L23" class="ln">    23  </span>			templateValueExists := args[2].(bool)
+<span id="L24" class="ln">    24  </span>			return templateKey, templateValue, templateValueExists
+<span id="L25" class="ln">    25  </span>		}).
+<span id="L26" class="ln">    26  </span>		Append(func(key string, value interface{}, exists bool) (string, interface{}, error) {
+<span id="L27" class="ln">    27  </span>			return key, value, pipe.CheckErrorf(!exists, &#34;Unknown gopages key: %q&#34;, key)
+<span id="L28" class="ln">    28  </span>		}).
+<span id="L29" class="ln">    29  </span>		Append(func(key string, value interface{}) (string, error) {
+<span id="L30" class="ln">    30  </span>			valueStr, isString := value.(string)
+<span id="L31" class="ln">    31  </span>			return valueStr, pipe.CheckErrorf(!isString, &#34;gopages key %q is not a string&#34;, key)
+<span id="L32" class="ln">    32  </span>		}).
+<span id="L33" class="ln">    33  </span>		Append(func(value string) (string, error) {
+<span id="L34" class="ln">    34  </span>			return value, pipe.CheckError(value == &#34;&#34;, errTemplateValueEmpty)
+<span id="L35" class="ln">    35  </span>		}).
+<span id="L36" class="ln">    36  </span>		Append(template.HTMLEscapeString)
+<span id="L37" class="ln">    37  </span>)
+<span id="L38" class="ln">    38  </span>
+<span id="L39" class="ln">    39  </span>func addGoPagesFuncs(funcs template.FuncMap, modulePackage string, args flags.Args) {
+<span id="L40" class="ln">    40  </span>	funcs[&#34;node_html&#34;] = nodeHTML(funcs[&#34;node_html&#34;].(node_htmlFunc), args.BaseURL)
+<span id="L41" class="ln">    41  </span>
+<span id="L42" class="ln">    42  </span>	longTitle := fmt.Sprintf(&#34;%s | %s&#34;, args.SiteTitle, args.SiteDescription)
+<span id="L43" class="ln">    43  </span>	if args.SiteTitle == &#34;&#34; || args.SiteDescription == &#34;&#34; {
+<span id="L44" class="ln">    44  </span>		longTitle = &#34;&#34;
+<span id="L45" class="ln">    45  </span>	}
+<span id="L46" class="ln">    46  </span>	values := map[string]interface{}{
+<span id="L47" class="ln">    47  </span>		&#34;BaseURL&#34;:       args.BaseURL,
+<span id="L48" class="ln">    48  </span>		&#34;ModuleURL&#34;:     path.Join(args.BaseURL, &#34;/pkg&#34;, modulePackage) + &#34;/&#34;,
+<span id="L49" class="ln">    49  </span>		&#34;SiteTitle&#34;:     args.SiteTitle,
+<span id="L50" class="ln">    50  </span>		&#34;SiteTitleLong&#34;: longTitle,
+<span id="L51" class="ln">    51  </span>	}
+<span id="L52" class="ln">    52  </span>	funcs[&#34;gopages&#34;] = func(defaultValue, firstKey string, keys ...string) (string, error) {
+<span id="L53" class="ln">    53  </span>		keys = append([]string{firstKey}, keys...) <span class="comment">// require at least one key</span>
+<span id="L54" class="ln">    54  </span>		multiArgs := make([][]interface{}, len(keys))
+<span id="L55" class="ln">    55  </span>		for i, key := range keys {
+<span id="L56" class="ln">    56  </span>			value, ok := values[key]
+<span id="L57" class="ln">    57  </span>			multiArgs[i] = []interface{}{key, value, ok, defaultValue}
+<span id="L58" class="ln">    58  </span>		}
+<span id="L59" class="ln">    59  </span>		out, err := pipe.Filter(goPagesTemplateVarPipe, multiArgs)
+<span id="L60" class="ln">    60  </span>		result := defaultValue
+<span id="L61" class="ln">    61  </span>		if err == nil {
+<span id="L62" class="ln">    62  </span>			result = out[0][0].(string)
+<span id="L63" class="ln">    63  </span>		}
+<span id="L64" class="ln">    64  </span>		if errors.Is(err, errTemplateValueEmpty) {
+<span id="L65" class="ln">    65  </span>			err = nil
+<span id="L66" class="ln">    66  </span>		}
+<span id="L67" class="ln">    67  </span>		return result, err
+<span id="L68" class="ln">    68  </span>	}
+<span id="L69" class="ln">    69  </span>	funcs[&#34;gopagesWatchScript&#34;] = func() string {
+<span id="L70" class="ln">    70  </span>		script := fmt.Sprintf(`
+<span id="L71" class="ln">    71  </span>&lt;script&gt;
+<span id="L72" class="ln">    72  </span>const startDate = %q
+<span id="L73" class="ln">    73  </span>const timeoutMillis = 2000
+<span id="L74" class="ln">    74  </span>const poll = () =&gt; {
+<span id="L75" class="ln">    75  </span>	fetch(window.location).then(resp =&gt; {
+<span id="L76" class="ln">    76  </span>		const newDate = resp.headers.get(&#34;GoPages-Last-Updated&#34;)
+<span id="L77" class="ln">    77  </span>		if (newDate != startDate) {
+<span id="L78" class="ln">    78  </span>			window.location.reload()
+<span id="L79" class="ln">    79  </span>		}
+<span id="L80" class="ln">    80  </span>	})
+<span id="L81" class="ln">    81  </span>}
+<span id="L82" class="ln">    82  </span>window.setInterval(poll, timeoutMillis)
+<span id="L83" class="ln">    83  </span>&lt;/script&gt;
+<span id="L84" class="ln">    84  </span>`, time.Now().Format(time.RFC3339))
+<span id="L85" class="ln">    85  </span>		if !args.Watch {
+<span id="L86" class="ln">    86  </span>			script = &#34;&#34;
+<span id="L87" class="ln">    87  </span>		}
+<span id="L88" class="ln">    88  </span>		return script
+<span id="L89" class="ln">    89  </span>	}
+<span id="L90" class="ln">    90  </span>}
+<span id="L91" class="ln">    91  </span>
+<span id="L92" class="ln">    92  </span>func readTemplates(pres *godoc.Presentation, funcs template.FuncMap, fs vfs.FileSystem) {
+<span id="L93" class="ln">    93  </span>	pres.CallGraphHTML = readTemplate(funcs, fs, &#34;callgraph.html&#34;)
+<span id="L94" class="ln">    94  </span>	pres.DirlistHTML = readTemplate(funcs, fs, &#34;dirlist.html&#34;)
+<span id="L95" class="ln">    95  </span>	pres.ErrorHTML = readTemplate(funcs, fs, &#34;error.html&#34;)
+<span id="L96" class="ln">    96  </span>	pres.ExampleHTML = readTemplate(funcs, fs, &#34;example.html&#34;)
+<span id="L97" class="ln">    97  </span>	pres.GodocHTML = parseTemplate(funcs, &#34;godoc.html&#34;, godocHTML)
+<span id="L98" class="ln">    98  </span>	pres.ImplementsHTML = readTemplate(funcs, fs, &#34;implements.html&#34;)
+<span id="L99" class="ln">    99  </span>	pres.MethodSetHTML = readTemplate(funcs, fs, &#34;methodset.html&#34;)
+<span id="L100" class="ln">   100  </span>	pres.PackageHTML = readTemplate(funcs, fs, &#34;package.html&#34;)
+<span id="L101" class="ln">   101  </span>	pres.PackageRootHTML = readTemplate(funcs, fs, &#34;packageroot.html&#34;)
+<span id="L102" class="ln">   102  </span>}
+<span id="L103" class="ln">   103  </span>
+<span id="L104" class="ln">   104  </span>func readTemplate(funcs template.FuncMap, fs vfs.FileSystem, name string) *template.Template {
+<span id="L105" class="ln">   105  </span>	<span class="comment">// use underlying file system fs to read the template file</span>
+<span id="L106" class="ln">   106  </span>	<span class="comment">// (cannot use template ParseFile functions directly)</span>
+<span id="L107" class="ln">   107  </span>	data, err := vfs.ReadFile(fs, path.Join(&#34;lib/godoc&#34;, name))
+<span id="L108" class="ln">   108  </span>	if err != nil {
+<span id="L109" class="ln">   109  </span>		panic(err)
+<span id="L110" class="ln">   110  </span>	}
+<span id="L111" class="ln">   111  </span>	return parseTemplate(funcs, name, string(data))
+<span id="L112" class="ln">   112  </span>}
+<span id="L113" class="ln">   113  </span>
+<span id="L114" class="ln">   114  </span>func parseTemplate(funcs template.FuncMap, name, data string) *template.Template {
+<span id="L115" class="ln">   115  </span>	return template.Must(template.New(name).Funcs(funcs).Parse(data))
+<span id="L116" class="ln">   116  </span>}
+<span id="L117" class="ln">   117  </span>
+<span id="L118" class="ln">   118  </span>type node_htmlFunc = func(info *godoc.PageInfo, node interface{}, linkify bool) string
+<span id="L119" class="ln">   119  </span>
+<span id="L120" class="ln">   120  </span><span class="comment">// nodeHTML runs the original &#39;node_html&#39; template func, then rewrites any links inside it</span>
+<span id="L121" class="ln">   121  </span>func nodeHTML(original node_htmlFunc, baseURL string) node_htmlFunc {
+<span id="L122" class="ln">   122  </span>	pkgURL := path.Join(baseURL, &#34;/pkg&#34;)
+<span id="L123" class="ln">   123  </span>	return func(info *godoc.PageInfo, node interface{}, linkify bool) string {
+<span id="L124" class="ln">   124  </span>		s := original(info, node, linkify)
+<span id="L125" class="ln">   125  </span>		return strings.ReplaceAll(s, `&lt;a href=&#34;/pkg/`, fmt.Sprintf(`&lt;a href=&#34;%s/`, pkgURL))
+<span id="L126" class="ln">   126  </span>	}
+<span id="L127" class="ln">   127  </span>}
+<span id="L128" class="ln">   128  </span>
 </pre><p></p>
 
 <div id="footer">
