--- a/gopages/src/github.com/johnstarich/go/gopages/internal/module/module.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/module/module.go.html
@@ -61,31 +61,38 @@
 <span id="L5" class="ln">     5  </span>	&#34;os&#34;
 <span id="L6" class="ln">     6  </span>	&#34;path/filepath&#34;
 <span id="L7" class="ln">     7  </span>
-<span id="L8" class="ln">     8  </span>	&#34;github.com/johnstarich/go/gopages/internal/pipe&#34;
-<span id="L9" class="ln">     9  </span>	&#34;github.com/pkg/errors&#34;
-<span id="L10" class="ln">    10  </span>	&#34;golang.org/x/mod/modfile&#34;
-<span id="L11" class="ln">    11  </span>)
-<span id="L12" class="ln">    12  </span>
-<span id="L13" class="ln">    13  </span>func Package(modulePath string) (string, error) {
-<span id="L14" class="ln">    14  </span>	goMod := filepath.Join(modulePath, &#34;go.mod&#34;)
-<span id="L15" class="ln">    15  </span>	var modulePackage string
-<span id="L16" class="ln">    16  </span>	err := pipe.ChainFuncs(
-<span id="L17" class="ln">    17  </span>		func() error {
-<span id="L18" class="ln">    18  </span>			_, err := os.Stat(goMod)
-<span id="L19" class="ln">    19  </span>			return pipe.ErrIf(os.IsNotExist(err), errors.New(&#34;go.mod not found in the current directory&#34;))
-<span id="L20" class="ln">    20  </span>		},
-<span id="L21" class="ln">    21  </span>		func() error {
-<span id="L22" class="ln">    22  </span>			buf, err := ioutil.ReadFile(goMod)
-<span id="L23" class="ln">    23  </span>			modulePackage = modfile.ModulePath(buf)
-<span id="L24" class="ln">    24  </span>			return err
-<span id="L25" class="ln">    25  </span>		},
-<span id="L26" class="ln">    26  </span>		func() error {
-<span id="L27" class="ln">    27  </span>			return pipe.ErrIf(modulePackage == &#34;&#34;, errors.Errorf(&#34;Unable to find module package name in go.mod file: %s&#34;, goMod))
-<span id="L28" class="ln">    28  </span>		},
-<span id="L29" class="ln">    29  </span>	).Do()
-<span id="L30" class="ln">    30  </span>	return modulePackage, err
-<span id="L31" class="ln">    31  </span>}
-<span id="L32" class="ln">    32  </span>
+<span id="L8" class="ln">     8  </span>	&#34;github.com/johnstarich/go/pipe&#34;
+<span id="L9" class="ln">     9  </span>	&#34;golang.org/x/mod/modfile&#34;
+<span id="L10" class="ln">    10  </span>)
+<span id="L11" class="ln">    11  </span>
+<span id="L12" class="ln">    12  </span>var packagePipe = pipe.New(pipe.Options{}).
+<span id="L13" class="ln">    13  </span>	Append(func(args []interface{}) string {
+<span id="L14" class="ln">    14  </span>		modulePath := args[0].(string)
+<span id="L15" class="ln">    15  </span>		return modulePath
+<span id="L16" class="ln">    16  </span>	}).
+<span id="L17" class="ln">    17  </span>	Append(func(modulePath string) (string, error) {
+<span id="L18" class="ln">    18  </span>		goMod := filepath.Join(modulePath, &#34;go.mod&#34;)
+<span id="L19" class="ln">    19  </span>		_, err := os.Stat(goMod)
+<span id="L20" class="ln">    20  </span>		return goMod, pipe.CheckErrorf(os.IsNotExist(err), &#34;go.mod not found in the current directory&#34;)
+<span id="L21" class="ln">    21  </span>	}).
+<span id="L22" class="ln">    22  </span>	Append(func(goMod string) (string, string, error) {
+<span id="L23" class="ln">    23  </span>		buf, err := ioutil.ReadFile(goMod)
+<span id="L24" class="ln">    24  </span>		modulePackage := modfile.ModulePath(buf)
+<span id="L25" class="ln">    25  </span>		return goMod, modulePackage, err
+<span id="L26" class="ln">    26  </span>	}).
+<span id="L27" class="ln">    27  </span>	Append(func(goMod, modulePackage string) (string, error) {
+<span id="L28" class="ln">    28  </span>		return modulePackage, pipe.CheckErrorf(modulePackage == &#34;&#34;, &#34;Unable to find module package name in go.mod file: %s&#34;, goMod)
+<span id="L29" class="ln">    29  </span>	})
+<span id="L30" class="ln">    30  </span>
+<span id="L31" class="ln">    31  </span>func Package(modulePath string) (string, error) {
+<span id="L32" class="ln">    32  </span>	out, err := packagePipe.Do(modulePath)
+<span id="L33" class="ln">    33  </span>	var modulePackage string
+<span id="L34" class="ln">    34  </span>	if err == nil {
+<span id="L35" class="ln">    35  </span>		modulePackage = out[0].(string)
+<span id="L36" class="ln">    36  </span>	}
+<span id="L37" class="ln">    37  </span>	return modulePackage, err
+<span id="L38" class="ln">    38  </span>}
+<span id="L39" class="ln">    39  </span>
 </pre><p></p>
 
 <div id="footer">
